--- a/form.html
+++ b/form.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>看到这个的是猪</title>
 </head>
 <body>
     <form action="">
@@ -54,6 +54,7 @@
         </p>
         <input type="file">
         <input type="reset">
+        <button type="submit" value="Submit">提交</button>
     </form>
 </body>
 </html>
