--- a/form.html
+++ b/form.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>看到这个的是猪</title>
+    <title>用户登录</title>
 </head>
 <body>
     <form action="">
@@ -37,13 +37,13 @@
             <input type="checkbox" name="hobby"> 唱歌
         </p>
         <p>
-            猪儿：
+            猪：
             <!-- 默认选项selected -->
             <select>
 
-                <option selected="selected">郑莹</option>
-                <option>郑</option>
-                <option>莹</option>
+                <option selected="selected">你</option>
+                <option>是</option>
+                <option>猪</option>
          
             </select>
         </p>
